# asciiart

./: .gitignore  CMakeLists.txt  README.md  asciiart.sln  asciiart.vcxproj  main.cpp  test.txt
include/: asciiart.h
src/: asciiart.cpp  main.cpp
